--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Auth API",
   "main": "app/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon .",
+    "test": "mocha app/test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,10 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.2"
   }
 }
