--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.19.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
