--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
     "node-cache": "^4.2.1",
     "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
+    "passport-discord": "^0.1.3",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.1",
+    "uuid": "^3.3.3",
     "validator": "^11.1.0"
   },
   "devDependencies": {
