--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.15.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
     "prettier": "^1.18.2"
