--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "node-cache": "^4.2.1",
@@ -37,6 +38,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-oauth2-refresh": "^1.1.0",
     "passport-twitter": "^1.0.4",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
