--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,12 @@
     "object-curly-newline": "off",
     "consistent-return": "off",
     "class-methods-use-this": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-param-reassign": "off",
+    "implicit-arrow-linebreak": "off",
+    "function-paren-newline": "off",
+    "curly": "off",
+    "nonblock-statement-body-position": "off",
+    "operator-linebreak": "off"
   }
 }
