Env file tweaks, got Docker to run and some modifications

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,30 @@
 version: '3'
 services:
-  db:
-    image: 'postgres:11.5'
+  app:
+    build: .
+    depends_on:
+      - postgres
+    environment:
+      DB_URL: postgres://user:pass@postgres:5432/db
+      DB_USER: user
+      DB_PASSWORD: pass
+      DB_NAME: db
+      DB_DIALECT: postgres
+      DB_PORT: 5432
+      NODE_ENV: container
+      SERVER_PORT: 3000
     ports:
-      - '54321:5432'
-  # TODO: Implement the mail service and yell at gmem to get this running I guess.
-  # mail:
-  # auth-api:
-  #   build: '.'
-  #   ports:
-  #     - '8000:8000'
-  #   depends_on:
-  #     - 'db'
+      - '3000:3000'
+    command: npm start
+    volumes:
+      - .:/app/
+      - /app/node_modules
+
+  postgres:
+    image: postgres:11.5
+    ports:
+      - '35432:5432'
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: db
