--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
         fingerprints:
           - "a5:d5:7f:73:c9:c3:6d:6f:82:5d:3e:1c:c9:d6:a9:9c"
     - checkout
+    - run: sudo apt update; sudo apt install rsync
     - run:
         name: Deploy new files
         command: |
